Fixing images stretch

--- a/Styles/_job.scss
+++ b/Styles/_job.scss
@@ -168,8 +168,7 @@ $darktext: rgb(121, 121, 121);
                 .image{
                     display: flex;
                     flex-direction: row;
-                    align-items:center;
-                    justify-content: flex-start;
+                    align-items:flex-start;
                     width: 70%;
                     height: 15rem;
                     margin: 1rem 0rem;
